test/src/e2e_vm_tests/test_programs/should_fail/attributes_unimplemented_inner_attributes/src/main.sw
//! This inner doc comment will not produce an error.
library;

// Only the unimplemented error for inner attributes must be emitted.

#![storage(invalid)]
#![unknown]
#![allow(dead_code, deprecated), unknown, storage(invalid)]
struct S { }